[TD-613] Configure a timeout for all Databricks pytest tests (#530)

--- a/requirements/requirements-dev-third-party.txt
+++ b/requirements/requirements-dev-third-party.txt
@@ -39,6 +39,7 @@ pygame
 pytest==8.4.1
 pytest-check==2.5.3
 pytest-cov==6.2.1
+pytest-timeout==2.4.0
 pytest-xdist==3.8.0
 python-dateutil==2.9.0.post0
 setuptools==78.1.1
