[TD-616] Transporter import finder should return files ordered by timestamp (#533)
* Explicitly sorting found files by lastmod

--- a/server/libraries/td-shuttle/Cargo.toml
+++ b/server/libraries/td-shuttle/Cargo.toml
@@ -87,6 +87,7 @@ tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 wildmatch = { workspace = true }
+uuid = {  workspace = true, features = ["v4"] }
 
 [dev-dependencies]
 td-common = { workspace = true, features = ["td-test"] }
