[TD-627] Use runner action in the workflow execution title (#541)

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,6 +13,9 @@ defaults:
     shell: bash
     working-directory: .
 
+run-name: >
+  ${{ github.event_name == 'workflow_dispatch' && format('Integration Workflow (Standard) - ({0})', inputs.runner_action) || '' }}
+
 on:
   pull_request:
   workflow_dispatch:
