--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -1,7 +1,7 @@
 connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/RELEASE-NOTES
 connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/THIRD-PARTY
 connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/VERSION
-requirements-connector-databricks.txt
+requirements/requirements-connector-databricks.txt
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/RELEASE-NOTES
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/THIRD-PARTY
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/VERSION
@@ -13,7 +13,8 @@ requirements/requirements-connector-salesforce.txt
 connectors/python/tabsdata_snowflake/tabsdata_snowflake/assets/manifest/RELEASE-NOTES
 connectors/python/tabsdata_snowflake/tabsdata_snowflake/assets/manifest/THIRD-PARTY
 connectors/python/tabsdata_snowflake/tabsdata_snowflake/assets/manifest/VERSION
-requirements-connector-snowflake.txt
+requirements/requirements-connector-snowflake.txt
+requirements/requirements-connector-all.txt
 requirements/requirements-dev-first-party.txt
 requirements/requirements-first-party.txt
 assets/manifest/THIRD-PARTY_connectors
@@ -23,4 +24,7 @@ connectors/python/tabsdata_databricks/tabsdata_databricks/VERSION
 connectors/python/tabsdata_mongodb/tabsdata_mongodb/VERSION
 connectors/python/tabsdata_salesforce/tabsdata_salesforce/VERSION
 connectors/python/tabsdata_snowflake/tabsdata_snowflake/VERSION
+server/libraries/td-supervisor/src/services/supervisor.rs
+server/libraries/td-supervisor/src/services/tdserver.rs
+server/libraries/td-supervisor/src/services/bootloader.rs
 variant/assets/manifest/RELEASE-NOTES
