--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@
 name: Release Workflow (Standard) - (${{ inputs.runner_action }})
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}-${{ inputs.runner_action == 'build' && 'build' || format('run-{0}', github.run_id) }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}-${{ github.event_name == 'schedule' && 'weekly' || (inputs.runner_action == 'build' && 'build' || format('run-{0}', github.run_id))}}
   cancel-in-progress: true
 
 defaults:
@@ -14,7 +14,7 @@ defaults:
     working-directory: .
 
 run-name: >
-  ${{ github.event_name == 'workflow_dispatch' && format('Release Workflow (Standard) - ({0})', inputs.runner_action) || '' }}
+  ${{ github.event_name == 'workflow_dispatch' && format('Release Workflow (Standard) - ({0})', inputs.runner_action) || github.event_name == 'schedule' && 'Release Workflow (Standard) - (Weekly)' || '' }}
 
 on:
   workflow_dispatch:
