[TD-664] Upgrade all smoothly upgradable crates (#576)

--- a/server/libraries/td-security/Cargo.toml
+++ b/server/libraries/td-security/Cargo.toml
@@ -50,7 +50,7 @@ td-error = { workspace = true }
 
 # External dependencies
 
-argon2 = { workspace = true }
+argon2 = { workspace = true, features = [ "std" ] }
 derive_builder = { workspace = true }
 getset = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
