--- a/Cargo.toml
+++ b/Cargo.toml
@@ -255,6 +255,7 @@ version = "0.6.0"
 
 [workspace.dependencies.argon2]
 version = "0.5.3"
+features = [ "std" ]
 
 [workspace.dependencies.async-trait]
 version = "0.1.88"
@@ -285,7 +286,7 @@ features = ["serde"]
 version = "1.10.1"
 
 [workspace.dependencies.clap]
-version = "4.5.41"
+version = "4.5.42"
 features = ["derive"]
 
 [workspace.dependencies.clap_derive]
@@ -295,13 +296,13 @@ version = "4.5.41"
 version = "0.4.41"
 
 [workspace.dependencies.colored]
-version = "2.2.0"
+version = "3.0.0"
 
 [workspace.dependencies.color-eyre]
 version = "0.6.5"
 
 [workspace.dependencies.config]
-version = "0.14.1"
+version = "0.15.13"
 features = ["yaml"]
 
 [workspace.dependencies.console]
@@ -309,7 +310,7 @@ version = "0.16"
 features = ["std"]
 
 [workspace.dependencies.crossterm]
-version = "0.28.1"
+version = "0.29.0"
 
 [workspace.dependencies.crossterm_terminal]
 version = "0.3.2"
@@ -318,7 +319,7 @@ version = "0.3.2"
 version = "0.4.1"
 
 [workspace.dependencies.constcat]
-version = "0.5.1"
+version = "0.6.1"
 
 [workspace.dependencies.const_format]
 version = "0.2.34"
@@ -333,13 +334,13 @@ version = "0.7.0"
 version = "0.20.2"
 
 [workspace.dependencies.dirs]
-version = "5.0.1"
+version = "6.0.0"
 
 [workspace.dependencies.dir-size]
 version = "0.1.1"
 
 [workspace.dependencies.duct]
-version = "0.13.7"
+version = "1.0.0"
 
 [workspace.dependencies.dunce]
 version = "1.0.5"
@@ -389,7 +390,7 @@ version = "0.18.0"
 features = ["default", "improved_unicode"]
 
 [workspace.dependencies.itertools]
-version = "0.13.0"
+version = "0.14.0"
 
 [workspace.dependencies.jsonwebtoken]
 version = "9.3.1"
@@ -404,14 +405,14 @@ version = "0.3.0"
 version = "0.2.174"
 
 [workspace.dependencies.nix]
-version = "0.29.0"
+version = "0.30.1"
 features = ["process"]
 
 [workspace.dependencies.num-format]
 version = "0.4"
 
 [workspace.dependencies.object_store]
-version = "0.11.2"
+version = "0.12.3"
 features = ["aws", "azure", "gcp", "http"]
 
 [workspace.dependencies.once_cell]
@@ -422,10 +423,10 @@ version = "0.10.73"
 features = ["vendored"]
 
 [workspace.dependencies.opentelemetry_sdk]
-version = "0.26.0"
+version = "0.30.0"
 
 [workspace.dependencies.opentelemetry-stdout]
-version = "0.26.0"
+version = "0.30.0"
 
 [workspace.dependencies.paste]
 version = "1.0.15"
@@ -434,7 +435,7 @@ version = "1.0.15"
 version = "0.2.1"
 
 [workspace.dependencies.petgraph]
-version = "0.7.1"
+version = "0.8.2"
 features = ["serde", "serde_derive"]
 
 [workspace.dependencies.pico-args]
@@ -448,7 +449,7 @@ features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud
 version = "0.9.2"
 
 [workspace.dependencies.ratatui]
-version = "0.28.1"
+version = "0.29.0"
 
 [workspace.dependencies.regex]
 version = "1.11.1"
@@ -460,7 +461,7 @@ version = "0.12.22"
 version = "0.17.14"
 
 [workspace.dependencies.rustls]
-version = "0.23.29"
+version = "0.23.31"
 
 [workspace.dependencies.rust-embed]
 version = "8.7.2"
@@ -479,7 +480,7 @@ features = ["derive"]
 version = "1.0.141"
 
 [workspace.dependencies.serde_valid]
-version = "0.25.1"
+version = "1.0.5"
 
 [workspace.dependencies.serde_yaml]
 version = "0.9.34"
@@ -495,7 +496,7 @@ version = "0.27.2"
 version = "3.0.2"
 
 [workspace.dependencies.sysinfo]
-version = "0.35.2"
+version = "0.36.1"
 
 [workspace.dependencies.temp-env]
 version = "0.3.6"
@@ -516,14 +517,14 @@ version = "0.4.2"
 version = "2.0.12"
 
 [workspace.dependencies.tokio]
-version = "1.46.1"
+version = "1.47.0"
 features = ["full"]
 
 [workspace.dependencies.tokio-util]
 version = "0.7.15"
 
 [workspace.dependencies.toml]
-version = "0.8.23"
+version = "0.9.4"
 
 [workspace.dependencies.tower]
 version = "0.5.2"
@@ -540,7 +541,7 @@ version = "0.6.6"
 features = ["cors", "timeout", "trace"]
 
 [workspace.dependencies.tabled]
-version = "0.17.0"
+version = "0.20.0"
 
 [workspace.dependencies.tracing]
 version = "0.1.41"
