--- a/variant/resources/profile/workspace/config/proc/regular/apiserver/config/log.yaml
+++ b/variant/resources/profile/workspace/config/proc/regular/apiserver/config/log.yaml
@@ -9,6 +9,7 @@ profiles:
     level: debug
     directives:
       - tower::buffer::worker=info
+      - opentelemetry_sdk=error
       # Uncomment the following lines to set specific log levels for different components.
       # By default, all components will inherit the level from the profile.
       # - td_apiserver=error
