--- a/make/fragments/tasks/lock_py.toml
+++ b/make/fragments/tasks/lock_py.toml
@@ -3,7 +3,7 @@
 #
 
 [tasks.lock_py]
-category = "01 - Clean"
+category = "02 - Tidy"
 description = "Task 'lock' for Python projects"
 run_task = [
     { name = [
@@ -19,33 +19,33 @@ run_task = [
 ]
 
 [tasks.lock_py_ta_features]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_ta_tableframe]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_te_tableframe]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_tabsdata]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_tabsdata_databricks]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_tabsdata_mongodb]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_tabsdata_salesforce]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 
 [tasks.lock_py_tabsdata_snowflake]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
