--- a/make/fragments/tasks/lock_rs.toml
+++ b/make/fragments/tasks/lock_rs.toml
@@ -3,7 +3,7 @@
 #
 
 [tasks.lock_rs]
-category = "01 - Clean"
+category = "02 - Tidy"
 description = "Task 'lock' for Rust projects"
 run_task = [
     { name = [
@@ -14,21 +14,21 @@ run_task = [
 ]
 
 [tasks.lock_rs_macros]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 command = "cargo"
 args = ["generate-lockfile"]
 
 [tasks.lock_rs_modules]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 cwd = "${PROJECT_RS_TD_MACROS_FOLDER}"
 command = "cargo"
 args = ["generate-lockfile"]
 
 [tasks.lock_rs_expansions]
-category = "01 - Clean"
+category = "02 - Tidy"
 private = true
 cwd = "${PROJECT_RS_TY_EXPANSIONS_FOLDER}"
 command = "cargo"
