--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -29,7 +29,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum", "td-build", "td-objects", "td-schema", "thiserror", "toml"]
+ignored = ["openssl", "td-build", "td-objects", "td-schema", "thiserror", "toml", "utoipa"]
 
 # Build dependencies
 
