--- a/Cargo.toml
+++ b/Cargo.toml
@@ -438,8 +438,15 @@ features = ["serde", "serde_derive"]
 version = "0.5.0"
 
 [workspace.dependencies.polars]
-version = "0.44.2"
-features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write", "sql"]
+version = "0.49.1"
+features = ["lazy", "polars-lazy", "async", "csv", "json", "parquet", "cloud", "aws", "azure", "gcp", "sql"]
+
+[workspace.dependencies.polars-io]
+version = "0.49.1"
+features = ["cloud"]
+
+[workspace.dependencies.polars-parquet-format]
+version = "0.1.0"
 
 [workspace.dependencies.rand]
 version = "0.9.2"
