--- a/server/libraries/td-shuttle/Cargo.toml
+++ b/server/libraries/td-shuttle/Cargo.toml
@@ -75,7 +75,9 @@ futures-util = { workspace = true }
 getset = { workspace = true }
 itertools = { workspace = true }
 object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
-polars = { workspace = true, features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write"] }
+polars = { workspace = true, features = ["lazy", "polars-lazy", "async", "csv", "json", "parquet", "cloud", "aws", "azure", "gcp", "sql"] }
+polars-io = { version = "0.49.1", features = ["cloud"]  }
+polars-parquet-format = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
