--- a/Makeroot.toml
+++ b/Makeroot.toml
@@ -37,6 +37,7 @@ PROJECT_RS_TD_MACROS_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/macros/
 PROJECT_RS_TY_EXPANSIONS_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/expansions/polars/", normalize = true }
 PROJECT_PY_TA_FEATURES_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/client/td-lib/ta_features/", normalize = true }
 PROJECT_PY_TA_TABLEFRAME_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/client/td-lib/ta_tableframe/", normalize = true }
+PROJECT_PY_TE_EXAMPLES_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/extensions/python/td-lib/te_examples/", normalize = true }
 PROJECT_PY_TE_TABLEFRAME_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/extensions/python/td-lib/te_tableframe/", normalize = true }
 PROJECT_PY_TD_SDK_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/client/td-sdk/", normalize = true }
 PROJECT_PY_TABSDATA_DATABRICKS_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/connectors/python/tabsdata_databricks/", normalize = true }
@@ -52,6 +53,7 @@ BOOK_DEVELOPER_GUIDE_FOLDER = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/books/d
 
 TESTS_PY_TA_FEATURES_FOLDER = { value = "tests_ta_features/", normalize = true }
 TESTS_PY_TA_TABLEFRAME_FOLDER = { value = "tests_ta_tableframe/", normalize = true }
+TESTS_PY_TE_EXAMPLES_FOLDER = { value = "tests_te_examples/", normalize = true }
 TESTS_PY_TE_TABLEFRAME_FOLDER = { value = "tests_te_tableframe/", normalize = true }
 TESTS_PY_TABSDATA_FOLDER = { value = "tests_tabsdata/", normalize = true }
 TESTS_PY_TABSDATA_DATABRICKS_FOLDER = { value = "tests_tabsdata_databricks/", normalize = true }
