--- a/make/fragments/tasks/clean_py.toml
+++ b/make/fragments/tasks/clean_py.toml
@@ -9,6 +9,7 @@ run_task = [
     { name = [
         "clean_py_ta_features",
         "clean_py_ta_tableframe",
+        "clean_py_te_examples",
         "clean_py_te_tableframe",
         "clean_py_tabsdata",
         "clean_py_tabsdata_databricks",
@@ -36,6 +37,12 @@ category = "01 - Clean"
 private = true
 command = "python"
 args = ["${CLEAN_PY}", "${PROJECT_PY_TA_TABLEFRAME_FOLDER}", "py"]
+
+[tasks.clean_py_te_examples]
+category = "01 - Clean"
+private = true
+command = "python"
+args = ["${CLEAN_PY}", "${PROJECT_PY_TE_EXAMPLES_FOLDER}", "py"]
 
 [tasks.clean_py_te_tableframe]
 category = "01 - Clean"
